substrate/frame/support/test/tests/benchmark_ui/bad_return_type_blank_with_question.stderr
error[E0277]: the `?` operator can only be used in a function that returns `Result` or `Option` (or another type that implements `FromResidual`)
  --> tests/benchmark_ui/bad_return_type_blank_with_question.rs:32:14
   |
22 | #[benchmarks]
   | ------------- this function should return `Result` or `Option` to accept `?`
...
32 |         something()?;
   |                    ^ cannot use the `?` operator in a function that returns `()`
   |
   = help: the trait `FromResidual<Result<Infallible, frame_benchmarking::BenchmarkError>>` is not implemented for `()`
